--- a/atm.html
+++ b/atm.html
@@ -15,6 +15,7 @@
 		}
 		.container{
 			width: 80%;
+			min-width: 500px;
 			/*height: 100%;*/
 			/*background-color: #0000C6;*/
 			padding-top:10px; 
